# pcap-forensics

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pcap_forensics/: analyzer.py  cli.py  main.py
tests/: test_analyzer.py
